<resources>
    <string name="app_name">Snap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="photos">Photos</string>
    <string name="albums">Albums</string>
    <string name="delete_image_x"><![CDATA[" <![CDATA[Delete the image <b>%1$s</b>?]]></string>
    <string name="delete_image">Delete Image</string>
    <string name="cancel">Cancel</string>
    <string name="permission_required">To use this feature, you must enable the permission.</string>
    <string name="ok">Ok</string>
    <string name="external_storage_permission">To get the images app need Read Permission.</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="read_permission_denied">Read Permission is denied</string>
    <string name="name">Name</string>
    <string name="created_date">Created Date</string>
    <string name="dateModified">Last Updated</string>
    <string name="sort">Sort</string>
    <string name="Size">Size</string>
    <string name="saveUrl">Store Url</string>
    <string name="ref_store">Reference Stored</string>
    <string name="ref_store_failed">Unable To Store Reference</string>
    <string name="file_upload_failed">File Upload Failed</string>
    <string name="cancelSnackbar">Cancel</string>
    <string name="upload_done">Successfully Uploaded to Cloud</string>
    <string name="feature_not_available">This feature is not available on your phone</string>
</resources>